package com.directi.training.lsp.solution;

public class Duck implements Toy
{
    public void quack()
    {
        System.out.println("Quack...");
    }

    public void swim()
    {
        System.out.println("Swim...");
    }
}
