package com.directi.training.lsp.solution;

public interface Toy {
    public void swim();

    public void quack();

}
